--- a/oopsla21/discussion.tex
+++ b/oopsla21/discussion.tex
@@ -1,8 +1,9 @@
 \section{Limitation}
 \label{sec:limit}
 
-This section describes some limitations of \NM{}. 
+This section describes some limitations of \NM{}. First, \NM{} may consume more memory than some popular allocators, especially when transparent huge pages are enabled. \NM{} currently allocates a big chunk (larger than a huge page) from the OS. Although this method reduces the possible system call overhead, the OS will satisfy the memory allocations with huge pages, if transparent huge pages are enables. That is, the whole huge page will be wasted even if applications only use a small portion in such as huge pages. 
 
-The first limitation of \NM{} is that it consumes more memory than some popular allocators. Based on our analysis, the memory consumption is caused by \NM{}'s bag mechanism, especially with transparent huge page support. Currently, \NM{} employs one MB as a bag, which indicates that objects of each size will occupy at least of 1 MB, when transparent huge page support is enabled. Further, \NM{}'s design achieves a fast lookup on the metadata, but will utilize more memory unfortunately. We will investigate whether reducing the size of a bag could help reduce the memory consumption in the future.
+Second, \NM{}'s interleaved heap cannot always achieve the performance improvement due to the following reasons: (1) although the interleaved heap may avoid memory controller congestion caused by concurrent accesses from multiple child threads, it introduces unnecessary overhead for the initial thread sine it is forced to have some remote accesses. (2) Although \NM{} avoids the change of programs to utilize the interleaved heap, it imposes additional overhead to identify the callsites for potentially-shared objects. Therefore, users should decide whether to enable the interleaved heap or not. 
+%Based on our analysis, the memory consumption is caused by \NM{}'s bag mechanism, especially with transparent huge page support. Currently, \NM{} employs one MB as a bag, which indicates that objects of each size will occupy at least of 1 MB, when transparent huge page support is enabled. Further, \NM{}'s design achieves a fast lookup on the metadata, but will utilize more memory unfortunately. We will investigate whether reducing the size of a bag could help reduce the memory consumption in the future.
 
 %The second limitation is that \NM{} will crash less often by preallocating a huge chunk of memory from the OS in the beginning. If an invalid reference is landed within a pre-allocated range, a program will not crash, different from other allocators. Instead, \NM{} aims to achieve the high performance over the reliability. Therefore, we believe that this limitation is acceptable.  
